--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <legstar.version>1.5.3</legstar.version>
-    <legstar.core.version>1.5.10</legstar.core.version>
+    <legstar.core2.version>2.0.2</legstar.core2.version>
     <avro.version>1.7.7</avro.version>
     <hadoop.version>2.4.1</hadoop.version>
     <jaxb.version>2.2.2</jaxb.version>
@@ -105,16 +104,21 @@
 
     <dependencies>
 
-      <!-- LegStar -->
+      <!-- LegStar V2 -->
       <dependency>
           <groupId>com.legsem.legstar</groupId>
-          <artifactId>legstar-cob2trans</artifactId>
-          <version>${legstar.version}</version>
+          <artifactId>legstar-base</artifactId>
+          <version>${legstar.core2.version}</version>
       </dependency>
       <dependency>
           <groupId>com.legsem.legstar</groupId>
-          <artifactId>legstar-coxbapi</artifactId>
-          <version>${legstar.core.version}</version>
+          <artifactId>legstar-cob2xsd</artifactId>
+          <version>${legstar.core2.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.legsem.legstar</groupId>
+          <artifactId>legstar-base-generator</artifactId>
+          <version>${legstar.core2.version}</version>
       </dependency>
 
       <!-- Apache avro -->
@@ -207,11 +211,11 @@
           <version>${jackson.version}</version>
       </dependency>
 
-      <!-- XML schema -->
+       <!-- XML schema -->
       <dependency>
-        <groupId>org.apache.ws.commons.schema</groupId>
-        <artifactId>XmlSchema</artifactId>
-        <version>1.4.7</version>
+          <groupId>org.apache.ws.xmlschema</groupId>
+          <artifactId>xmlschema-core</artifactId>
+          <version>2.2.0</version>
       </dependency>
 
       <!-- Apache utilities -->
@@ -224,6 +228,11 @@
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
         <version>1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.6</version>
       </dependency>
 
       <!-- Logging -->
