--- a/legstar.avro.translator/pom.xml
+++ b/legstar.avro.translator/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.legsem.legstar</groupId>
     <artifactId>legstar.avro</artifactId>
-    <version>0.4.0</version>
+    <version>0.4.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>legstar.avro.translator</artifactId>
