Added a maven plugin and a simple ant script to help with using the generator.

--- a/legstar.avro.distrib/src/main/ant/build.xml
+++ b/legstar.avro.distrib/src/main/ant/build.xml
@@ -1,50 +1,34 @@
-<project name="cob2avro-sample" default="run" basedir=".">
+<project name="cob2avro-sample" default="generate" basedir=".">
 
-    <!-- Generates and compiles samples                             -->
-    <!-- Runs the pure java sample                                  -->
+    <!-- Set LEGSTAR_AVRO_HOME to use this ant script from another location  -->
+    <!-- Point cobdir to a folder containing COBOL copybooks                 -->
+    <!-- Point gendir where you want the avro artifacts to be generated      -->
 
-    <property name="libdir" location="../lib"/>
-    <property name="cobdir" location="cobol"/>
-    <property name="javadir" location="java"/>
-    <property name="gendir" location="gen"/>
-    <property name="genjavadir" location="${gendir}/java"/>
-    <property name="genpkgpfx" value="com.legstar.avro.samples"/>
-    <property name="bindir" location="bin"/>
+    <property environment="env"/>
+    <property name="env.LEGSTAR_AVRO_HOME" value="."/>
+    <property name="legstar.avro.home" location="${env.LEGSTAR_AVRO_HOME}"/>
+    <property name="cobdir" location="${legstar.avro.home}/samples/cobol"/>
+    <property name="gendir" location="target/generated-sources"/>
+    <property name="packageprefix" value="legstar.samples"/>
+    <property name="config" location="${legstar.avro.home}/samples/conf/cob2xsd.properties"/>
+    <property name="logconfig" location="${legstar.avro.home}/samples/conf/log4j.properties"/>
 
-    <!-- Classpath for generation and compilation-->
+    <!-- Classpath for generation -->
     <path id="project.class.path">
-        <fileset dir="${libdir}">
+        <fileset dir="${legstar.avro.home}/lib">
             <include name="*.jar"/>
         </fileset>
     </path>
     <property name="project.classpath" refid="project.class.path"/>
 
     <target name="init">
-        <mkdir dir="${bindir}"/>
+        <mkdir dir="${gendir}"/>
     </target>
 
     <target name="generate" depends="init">
         <java classname="com.legstar.avro.generator.Cob2AvroGeneratorMain" fork="true" failonerror="true">
-            <arg line="-i ${cobdir} -o ${gendir} -p ${genpkgpfx}"/>
+            <arg line="-i ${cobdir} -o ${gendir} -p ${packageprefix}"/>
             <classpath path="${project.classpath}"/>
-        </java>
-    </target>
-
-    <target name="compile" depends="generate">
-        <javac srcdir="${genjavadir}:${javadir}" destdir="${bindir}" source="1.6" debug="true">
-            <classpath>
-                <pathelement path="${project.classpath}"/>
-                <pathelement location="${bindir}"/>
-            </classpath>
-        </javac>
-    </target>
-
-    <target name="run" depends="compile">
-        <java classname="${genpkgpfx}.custdat.CustdatReader" fork="true" failonerror="true">
-            <classpath>
-                <pathelement path="${project.classpath}"/>
-                <pathelement location="${bindir}"/>
-            </classpath>
         </java>
     </target>
 
