--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
       <module>legstar.avro.cob2avro</module>
       <module>legstar.avro.cob2avro.hadoop</module>
       <module>legstar.avro.distrib</module>
+      <module>legstar-avro-maven-plugin</module>
   </modules>
 
   <dependencyManagement>
@@ -118,6 +119,11 @@
       <dependency>
           <groupId>com.legsem.legstar</groupId>
           <artifactId>legstar-base-generator</artifactId>
+          <version>${legstar.core2.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.legsem.legstar</groupId>
+          <artifactId>legstar-maven-plugin</artifactId>
           <version>${legstar.core2.version}</version>
       </dependency>
 
@@ -297,7 +303,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
+            <version>3.2</version>
             <configuration>
                 <source>${compiler.version}</source>
                 <target>${compiler.version}</target>
@@ -369,6 +375,12 @@
         </plugin>
 
         <!-- Site reporting -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.4</version>
+        </plugin>
+
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-project-info-reports-plugin</artifactId>
