--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <legstar.core2.version>2.0.4-SNAPSHOT</legstar.core2.version>
+    <legstar.core2.version>2.0.4</legstar.core2.version>
     <avro.version>1.7.7</avro.version>
     <hadoop.version>2.4.1</hadoop.version>
     <jaxb.version>2.2.2</jaxb.version>
