--- a/legstar-avro-maven-plugin/pom.xml
+++ b/legstar-avro-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.legsem.legstar</groupId>
     <artifactId>legstar.avro</artifactId>
-    <version>0.4.2</version>
+    <version>0.4.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>legstar-avro-maven-plugin</artifactId>
